[gd_scene load_steps=30 format=2]

[ext_resource path="res://Scenes/Main_menu/Logos/Open-Crops/Open-Crops_Logo.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Main_menu/Fonts/Open_Crops.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/Main_menu/Soundtrack/Viilofarmi_Soundtrack.wav" type="AudioStream" id=3]
[ext_resource path="res://Main_Menu.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Main_menu/Icons/Hox.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Main_menu/Icons/Configuration/Maps.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Main_menu/Icons/Select_Button_Texture.png" type="Texture" id=7]
[ext_resource path="res://Maps_Configuration.gd" type="Script" id=8]
[ext_resource path="res://Config.gd" type="Script" id=9]
[ext_resource path="res://Scenes/Main_menu/Scripts/Heightmap_Filedialogs.gd" type="Script" id=10]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.301961, 0.298039, 0.321569, 1 )
border_color = Color( 0.498039, 0.478431, 0.478431, 1 )
corner_detail = 10

[sub_resource type="DynamicFont" id=2]
size = 130
outline_size = 5
outline_color = Color( 0.329412, 0.321569, 0.321569, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 60
outline_size = 5
outline_color = Color( 0.196078, 0.188235, 0.188235, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("Top_Panel/Open_Crops_Header:visible_characters")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Hox_Symbol_Blink"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Visibility_Control_Hox_Symbol:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.992157, 0.54902, 0.0313726, 0.631373 )
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.223529, 0.215686, 0.215686, 1 )
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=11]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.227451, 0.219608, 0.258824, 1 )

[sub_resource type="DynamicFont" id=13]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.215686, 0.207843, 0.243137, 1 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.207843, 0.2, 0.235294, 1 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.207843, 0.2, 0.235294, 1 )

[sub_resource type="DynamicFont" id=17]
size = 100
outline_size = 5
outline_color = Color( 0.568627, 0.0313726, 0.0313726, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=18]
size = 100
outline_size = 5
outline_color = Color( 0.580392, 0.596078, 0.0627451, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=19]
size = 100
outline_size = 5
outline_color = Color( 0.0313726, 0.501961, 0.0313726, 1 )
font_data = ExtResource( 2 )

[node name="Visibility_Control_Main_Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Open_Crops_Logo" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top_Panel" type="Panel" parent="."]
anchor_left = 0.106717
anchor_top = 0.000823508
anchor_right = 0.997342
anchor_bottom = 0.189712
margin_left = 0.000366211
margin_top = -0.889389
margin_right = 0.000366211
margin_bottom = -0.889389
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Open_Crops_Header" type="RichTextLabel" parent="Top_Panel"]
margin_right = 865.0
margin_bottom = 200.0
custom_fonts/normal_font = SubResource( 2 )
visible_characters = 0
text = "Open-Crops"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Visibility_Control_Version_Info" type="Control" parent="Top_Panel"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Version_Label" type="RichTextLabel" parent="Top_Panel/Visibility_Control_Version_Info"]
margin_left = 695.728
margin_top = 148.007
margin_right = 945.728
margin_bottom = 298.007
rect_rotation = -22.5
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0.972549, 0.498039, 0.294118, 1 )
text = " .Alpha"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music_Intro_Delay_Timer" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Header_Slide_In_AnimationPlayer" type="AnimationPlayer" parent="."]
method_call_mode = 1
anims/Header_Slide_In = SubResource( 4 )

[node name="Prompt_User_WindowDialog" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -200.0
margin_right = 200.0
margin_bottom = 200.0
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "Make this a separate scene in the future, as adviced."
}

[node name="Hox_Symbol_Blink_Animation" type="AnimationPlayer" parent="Prompt_User_WindowDialog"]
anims/Hox_Symbol_Blink = SubResource( 5 )

[node name="Visibility_Control_Hox_Symbol" type="Control" parent="Prompt_User_WindowDialog"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hox_Symbol" type="TextureRect" parent="Prompt_User_WindowDialog/Visibility_Control_Hox_Symbol"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 234.365
margin_top = -16.2062
margin_right = 1194.37
margin_bottom = 523.794
rect_rotation = 90.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Prompt_User_Window_Header_Label" type="RichTextLabel" parent="Prompt_User_WindowDialog"]
anchor_left = 0.09375
anchor_top = 0.4875
anchor_right = 0.90625
anchor_bottom = 0.6125
margin_bottom = 1.52588e-05
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Prompt_User_Window_Footer_Label" type="RichTextLabel" parent="Prompt_User_WindowDialog"]
anchor_left = 0.05
anchor_top = 0.625
anchor_right = 0.95
anchor_bottom = 0.775
margin_top = -1.52588e-05
custom_fonts/normal_font = SubResource( 7 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Visibility_Control_Selection_Buttons" type="Control" parent="Prompt_User_WindowDialog"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Prompt_User_Window_Agree_Button" type="TextureButton" parent="Prompt_User_WindowDialog/Visibility_Control_Selection_Buttons"]
anchor_left = 4.01787
anchor_top = 7.80297
anchor_right = 6.52828
anchor_bottom = 9.18678
margin_right = 401.664
margin_bottom = 221.408
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Configuration_WindowDialog" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -320.0
margin_right = 300.0
margin_bottom = 380.0
window_title = "Configuration"
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Configuration_WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 30.0
margin_bottom = -70.0
custom_constants/vseparation = 45
custom_constants/hseparation = 58
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Maps_Button" type="Button" parent="Configuration_WindowDialog/GridContainer"]
margin_right = 268.0
margin_bottom = 262.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 6 )

[node name="Maps_Button_RichTextLabel" type="RichTextLabel" parent="Configuration_WindowDialog/GridContainer/Maps_Button"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 50.0
custom_fonts/normal_font = SubResource( 8 )
bbcode_enabled = true
bbcode_text = "[center]Maps[/center]"
text = "Maps"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Maps_Configuration_WindowDialog" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -180.0
margin_right = 300.0
margin_bottom = 180.0
window_title = "Maps Configuration"
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Maps_Configuration_WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Maps_Configuration_WindowDialog/MarginContainer"]
margin_right = 600.0
margin_bottom = 360.0
custom_constants/vseparation = 40

[node name="Select_Heightmap_NW_Button" type="Button" parent="Maps_Configuration_WindowDialog/MarginContainer/GridContainer"]
margin_right = 600.0
margin_bottom = 50.0
rect_min_size = Vector2( 600, 50 )
focus_mode = 0
custom_styles/hover = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 11 )
enabled_focus_mode = 0
text = "Select Heightmap North-West"

[node name="Select_Heightmap_NW_File_Label" type="RichTextLabel" parent="Maps_Configuration_WindowDialog/MarginContainer/GridContainer/Select_Heightmap_NW_Button"]
margin_top = 54.0
margin_right = 600.0
margin_bottom = 94.0
rect_min_size = Vector2( 600, 40 )
custom_styles/normal = SubResource( 12 )
custom_fonts/normal_font = SubResource( 13 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Select_Heightmap_NE_Button" type="Button" parent="Maps_Configuration_WindowDialog/MarginContainer/GridContainer"]
margin_top = 90.0
margin_right = 600.0
margin_bottom = 140.0
rect_min_size = Vector2( 600, 50 )
focus_mode = 0
custom_styles/hover = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 11 )
enabled_focus_mode = 0
text = "Select Heightmap North-East"

[node name="Select_Heightmap_NE_File_Label" type="RichTextLabel" parent="Maps_Configuration_WindowDialog/MarginContainer/GridContainer/Select_Heightmap_NE_Button"]
margin_top = 54.0
margin_right = 600.0
margin_bottom = 94.0
rect_min_size = Vector2( 600, 40 )
custom_styles/normal = SubResource( 14 )
custom_fonts/normal_font = SubResource( 13 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Select_Heightmap_SW_Button" type="Button" parent="Maps_Configuration_WindowDialog/MarginContainer/GridContainer"]
margin_top = 180.0
margin_right = 600.0
margin_bottom = 230.0
rect_min_size = Vector2( 600, 50 )
focus_mode = 0
custom_styles/hover = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 11 )
enabled_focus_mode = 0
text = "Select Heightmap South-West"

[node name="Select_Heightmap_SW_File_Label" type="RichTextLabel" parent="Maps_Configuration_WindowDialog/MarginContainer/GridContainer/Select_Heightmap_SW_Button"]
margin_top = 54.0
margin_right = 600.0
margin_bottom = 94.0
rect_min_size = Vector2( 600, 40 )
custom_styles/normal = SubResource( 15 )
custom_fonts/normal_font = SubResource( 13 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Select_Heightmap_SE_Button" type="Button" parent="Maps_Configuration_WindowDialog/MarginContainer/GridContainer"]
margin_top = 270.0
margin_right = 600.0
margin_bottom = 320.0
rect_min_size = Vector2( 600, 50 )
focus_mode = 0
custom_styles/hover = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 11 )
enabled_focus_mode = 0
text = "Select Heightmap South-East"

[node name="Select_Heightmap_SE_File_Label" type="RichTextLabel" parent="Maps_Configuration_WindowDialog/MarginContainer/GridContainer/Select_Heightmap_SE_Button"]
margin_top = 54.0
margin_right = 600.0
margin_bottom = 94.0
rect_min_size = Vector2( 600, 40 )
custom_styles/normal = SubResource( 16 )
custom_fonts/normal_font = SubResource( 13 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Select_Heightmap_FileDialog" type="FileDialog" parent="Maps_Configuration_WindowDialog"]
margin_right = 600.0
margin_bottom = 350.0
rect_min_size = Vector2( 600, 350 )
popup_exclusive = true
window_title = "Open a File"
mode = 0
script = ExtResource( 10 )
__meta__ = {
"_editor_description_": "Unable to do error handling with TIFF image resolutions other than 3000x3000 pixels, fow now atleast, because they are not loadable."
}

[node name="Visibility_Control_Main_Menu_Buttons" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -142.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit_Button" type="Button" parent="Visibility_Control_Main_Menu_Buttons"]
margin_right = 640.0
margin_bottom = 142.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 17 )
enabled_focus_mode = 0
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Configure_Button" type="Button" parent="Visibility_Control_Main_Menu_Buttons"]
margin_left = 640.0
margin_right = 1280.0
margin_bottom = 142.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 18 )
enabled_focus_mode = 0
text = "Configure"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start_Game_Button" type="Button" parent="Visibility_Control_Main_Menu_Buttons"]
margin_left = 1280.0
margin_right = 1920.0
margin_bottom = 142.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 19 )
enabled_focus_mode = 0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Music_Intro_Delay_Timer" to="." method="_On_Music_Intro_Delay_Timer_Timeout"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_On_AudioStreamPlayer_Finished"]
[connection signal="animation_finished" from="Header_Slide_In_AnimationPlayer" to="." method="_On_Header_Slide_In_AnimationPlayer_Animation_Finished"]
[connection signal="hide" from="Prompt_User_WindowDialog" to="." method="_On_Prompt_User_WindowDialog_Hide"]
[connection signal="pressed" from="Configuration_WindowDialog/GridContainer/Maps_Button" to="Configuration_WindowDialog" method="_on_Maps_Button_pressed"]
[connection signal="pressed" from="Maps_Configuration_WindowDialog/MarginContainer/GridContainer/Select_Heightmap_NW_Button" to="Maps_Configuration_WindowDialog" method="_on_Select_Heightmap_NW_Button_pressed"]
[connection signal="pressed" from="Maps_Configuration_WindowDialog/MarginContainer/GridContainer/Select_Heightmap_NE_Button" to="Maps_Configuration_WindowDialog" method="_on_Select_Heightmap_NE_Button_pressed"]
[connection signal="pressed" from="Maps_Configuration_WindowDialog/MarginContainer/GridContainer/Select_Heightmap_SW_Button" to="Maps_Configuration_WindowDialog" method="_on_Select_Heightmap_SW_Button_pressed"]
[connection signal="pressed" from="Maps_Configuration_WindowDialog/MarginContainer/GridContainer/Select_Heightmap_SE_Button" to="Maps_Configuration_WindowDialog" method="_on_Select_Heightmap_SE_Button_pressed"]
[connection signal="file_selected" from="Maps_Configuration_WindowDialog/Select_Heightmap_FileDialog" to="Maps_Configuration_WindowDialog/Select_Heightmap_FileDialog" method="_on_Select_Heightmap_FileDialog_file_selected"]
[connection signal="pressed" from="Visibility_Control_Main_Menu_Buttons/Exit_Button" to="." method="_On_Exit_Button_Pressed"]
[connection signal="pressed" from="Visibility_Control_Main_Menu_Buttons/Configure_Button" to="." method="_on_Configure_Button_Pressed"]
[connection signal="pressed" from="Visibility_Control_Main_Menu_Buttons/Start_Game_Button" to="." method="_On_Start_Game_Button_Pressed"]
